# pgfutil

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
pgfutil/: __main__.py  core.py  fonts.py  ui.py
tests/: test_setup.py
